--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT=5000
-MONGO_URI='mongodb://127.0.0.1:27017/test'
+PORT=3000
+MONGO_URI=mongodb+srv://vagabond:vagabond@cluster0.pwnjs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
