--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.2",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.6.1",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.3",
