--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.4.6",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1"
