--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ PORT=3000
 MONGO_URI=mongodb+srv://vagabond:vagabond@cluster0.pwnjs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 
+JWT_SECRET=vagabond123
+EMAIL_USERNAME=22521232@gm.uit.edu.vn
+EMAIL_PASSWORD=dwkmixbulsmtbbeh
+
+
