--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@react-google-maps/api": "^2.20.6",
     "antd": "^5.24.6",
     "bcryptjs": "^3.0.2",
@@ -31,6 +35,7 @@
     "nodemon": "^3.1.9",
     "react-hook-form": "^7.55.0",
     "react-leaflet": "^5.0.0",
+    "react-quill-new": "^3.4.6",
     "react-select": "^5.10.1"
   }
 }
