--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-google-maps/api": "^2.20.6",
     "antd": "^5.24.6",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
