--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.3",
+    "cloudinary-react": "^1.8.1",
     "flowbite": "^3.1.2",
     "moment": "^2.30.1",
     "react": "^19.0.0",
