--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.24.6",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
+    "cloudinary-react": "^1.8.1",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
